# Wavomancer

./: .gitignore  CMakeLists.txt  README.md
Assets/: Game.cfg
Assets/Fonts/: Alagard Info.txt
Code/Engine/: Engine.cpp  Engine.h
Code/Engine/Assets/: AssetRegistry.cpp  AssetRegistry.h
Code/Engine/EntitySystem/: ComponentFactory.cpp  ComponentFactory.h  EntityFactory.cpp  EntityFactory.h  EntitySystem.cpp  EntitySystem.h  EntitySystemDefinitions.cpp  EntitySystemDefinitions.h
Code/Engine/EntitySystem/Components/: BoxCollisionComponent.cpp  BoxCollisionComponent.h  CircleCollisionComponent.cpp  CircleCollisionComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextRenderComponent.cpp  TextRenderComponent.h  ViewComponent.cpp  ViewComponent.h
Code/Engine/Input/: InputManager.cpp  InputManager.h  InputSystemDefinitions.cpp  InputSystemDefinitions.h
Code/Engine/Physics/: CollisionManager.cpp  CollisionManager.h
Code/Engine/Rendering/: RenderSystem.cpp  RenderSystem.h
Code/Engine/SFMLMath/: SFMLMath.hpp
Code/Game/: BuffDefinitions.cpp  BuffDefinitions.h  DamageDefinitions.h  Game.cpp  GameStates.cpp  GameStates.h
Code/Game/Entities/: EnemyEntity.cpp  EnemyEntity.h  GameManager.cpp  GameManager.h  HealthbarEntity.cpp  HealthbarEntity.h  PickupEntity.cpp  PickupEntity.h  PlayerEntity.cpp  PlayerEntity.h  ProjectileEntity.cpp  ProjectileEntity.h  WaveSystemEntity.cpp  WaveSystemEntity.h
